--- a/userarea/css/file.css
+++ b/userarea/css/file.css
@@ -5,3 +5,11 @@ input {
 textarea {
     padding:5px;
 }
+
+select {
+    padding:5px;
+    width:300px;
+    background-color: white;
+    border:1px solid gray;
+    border-radius: 5px;
+}
