--- a/userarea/css/file.css
+++ b/userarea/css/file.css
@@ -4,10 +4,14 @@ input {
 
 textarea {
     padding:5px;
+    margin-top:5px;
+    margin-bottom:5px;
 }
 
 select {
     padding:5px;
+    margin-top:5px;
+    margin-bottom:5px;
     width:300px;
     background-color: white;
     border:1px solid gray;
@@ -16,4 +20,15 @@ select {
 
 a {
     text-decoration: none;
+}
+
+button {
+    padding:5px;
+    margin-top:5px;
+    margin-bottom:5px;
+}
+
+img {
+    margin-top:5px;
+    margin-bottom:5px;
 }
