--- a/userarea/css/flipcard.css
+++ b/userarea/css/flipcard.css
@@ -33,6 +33,8 @@
     transform-style: preserve-3d;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     color:var(--flip-card-color);
+    font-family:tahoma,arial; 
+    font-size: 16px;
 }
 
 .flip-card:hover .flip-card-inner {
