--- a/userarea/css/card.css
+++ b/userarea/css/card.css
@@ -2,7 +2,7 @@
     --simple-card-space : 5px;
     --simple-card-general-height : 150px;
     --simple-card-general-width : 200px;
-    --simple-card-background-color : yellow;
+    --simple-card-background-color : #eee;
     --simple-card-border : 1px solid grey;
     --simple-card-title-color : black;
     --simple-card-body-color : black;
