--- a/userarea/css/toptab.css
+++ b/userarea/css/toptab.css
@@ -1,38 +1,53 @@
+:root {
+    --tab-background-color : white;
+    --tab-button-initial-background-color : #eee;
+    --tab-button-padding : 10px;
+    --tab-button-border-radius : 10px;
+    --tab-button-hover-background-color : #ddd;
+    --tab-button-active-background-color : #ccc;
+
+    --tabcontent-padding : 6px 12px;
+    --tabcontent-border : 1px solid gray;
+    --tabcontent-animation : fadeEffect 1s;
+}
+
 /* Style the tab */
 .tab {
     overflow: hidden;
-    /* border-bottom: 1px solid #444; */
-    background-color: white;
+    background-color: var(--tab-background-color);
+    border-bottom: 1px solid gray;
 }
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
-    background-color: #eee;
+    background-color: var(--tab-button-initial-background-color);
     float: left;
-    border: none;
+    border-bottom:none;
     outline: none;
     cursor: pointer;
-    padding: 10px 10px;
+    padding: var(--tab-button-padding) var(--tab-button-padding);
     transition: 0.3s;
-    border-radius: 10px 10px 0 0;
+    border-radius: var(--tab-button-border-radius) var(--tab-button-border-radius) 0 0;
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-    background-color: #ddd;
+    background-color: var(--tab-button-hover-background-color);
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-    background-color: #ccc;
+    background-color: var(--tab-button-active-background-color);
 }
 
 /* Style the tab content */
 .tabcontent {
     display: none;
-    padding: 6px 12px;
-    border: 1px solid #444;
-    animation: fadeEffect 1s;
+    padding: var(--tabcontent-padding);
+    border-left: var(--tabcontent-border);
+    border-right: var(--tabcontent-border);
+    border-bottom: var(--tabcontent-border);
+    animation: var(--tabcontent-animation);
 } 
 
 /* Go from zero to full opacity */
