--- a/userarea/css/topnav.css
+++ b/userarea/css/topnav.css
@@ -1,59 +1,78 @@
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-  font-family: Arial, Helvetica, sans-serif;
+:root {
+  --topnav-background-color : #333;
+  --topnav-font-family : Arial, Helvetica, sans-serif;
+  --topnav-font-size : 17px;
+  --topnav-color : #f2f2f2;
+  --topnav-text-align : center;
+  --topnav-anchor-padding : 14px 16px;
+  --topnav-anchor-hover-background-color : #ddd;
+  --topnav-anchor-hover-color : black;
+  --topnav-anchor-active-background-color : #04AA6D;
+  --topnav-anchor-active-color : white;
+  --topnav-main-margin-top: 30px;
 }
 
-/* Style the links inside the navigation bar */
+/********************************************************
+  menu horizontal non fixe
+ ********************************************************/
+.topnav {
+  background-color: var(--topnav-background-color);
+  overflow: hidden;
+  font-family: var(--topnav-font-family);
+  font-size: var(--topnav-font-size);
+  width: 100%;
+}
+
 .topnav a {
   float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+  color: var(--topnav-color);
+  text-align: var(--topnav-text-align);
+  padding: var(--topnav-anchor-padding);
   text-decoration: none;
-  font-size: 17px;
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: var(--topnav-anchor-hover-background-color);
+  color: var(--topnav-anchor-hover-color);
 }
 
-/* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #04AA6D;
-  color: white;
+  background-color: var(--topnav-anchor-active-background-color);
+  color: var(--topnav-anchor-active-color);
 }
 
-/* The navigation bar */
+/********************************************************
+  menu horizontal fixe
+ ********************************************************/
 .topnavfixed {
   overflow: hidden;
-  background-color: #333;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--topnav-background-color);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  font-family: var(--topnav-font-family);
+  font-size: var(--topnav-font-size);
 }
 
-/* Links inside the navbar */
 .topnavfixed a {
   float: left;
   display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+  color: var(--topnav-color);
+  text-align: var(--topnav-text-align);
+  padding: var(--topnav-anchor-padding);
   text-decoration: none;
 }
 
-/* Change background on mouse-over */
 .topnavfixed a:hover {
-  background: #ddd;
-  color: black;
+  background: var(--topnav-anchor-hover-background-color);
+  color: var(--topnav-anchor-hover-color);
 }
 
-/* Main content */
+.topnavfixed a.active {
+  background-color: var(--topnav-anchor-active-background-color);
+  color: var(--topnav-anchor-active-color);
+}
+
 .mainfixed {
-  margin-top: 30px;
+  margin-top: var(--topnav-main-margin-top);
 }
