--- a/userarea/css/advancebutton.css
+++ b/userarea/css/advancebutton.css
@@ -1,7 +1,8 @@
 .fullbtn {
   border: none; 
   color: white; 
-  padding: 14px 28px; 
+  font-size: 16px;
+  padding: 17px 17px; 
   cursor: pointer; 
   border-radius: 10px;
 }
@@ -43,10 +44,11 @@
 }
 
 .outlinebtn {
-  border: 2px solid black;
+  border: 4px solid black;
+  border-radius: 10px;
   background-color: white;
   color: black;
-  padding: 14px 28px;
+  padding: 14px 14px;
   font-size: 16px;
   cursor: pointer;
 }
