--- a/userarea/css/signupform.css
+++ b/userarea/css/signupform.css
@@ -6,7 +6,9 @@
     border-radius: 5px;
 }
 
-input[type=text], input[type=password] {
+.signupform input[type=text],
+.signupform input[type=password],
+.signupform input[type=email] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -17,7 +19,9 @@ input[type=text], input[type=password] {
     border-radius: 5px;
 }
 
-input[type=text]:focus, input[type=password]:focus {
+.signupform input[type=text]:focus, 
+.signupform input[type=password]:focus, 
+.signupform input[type=email]:focus {
     background-color: #ddd;
     outline: none;
 }
