--- a/site/style.css
+++ b/site/style.css
@@ -68,6 +68,7 @@
       display: block;
       overflow-x: auto;
       color: #2a2a2a;
+      line-height: 1.2;
     }
     table {
       width: 100%;
