--- a/userarea/css/signupform.css
+++ b/userarea/css/signupform.css
@@ -1,39 +1,61 @@
+:root {
+    --signupform-border : 3px solid #f1f1f1;
+    --signupform-border-radius : 5px;
+    --signupform-width : 500px;
+    --signupform-font-family : Arial, Helvetica, sans-serif;
+
+    --signupform-input-width : 100%;
+    --signupform-input-padding : 15px;
+    --signupform-input-margin : 5px 0 22px 0;
+    --signupform-input-background : #f1f1f1;
+    --signupform-input-border : none;
+    --signupform-input-border-radius : 5px;
+
+    --signupform-input-focus-background : #ddd;
+
+    --signupform-button-background : #04AA6D;
+    --signupform-button-color : white;
+    --signupform-button-border : none;
+    --signupform-button-width : 100%;
+    --signupform-buton-border-radius : 5px;
+}
+
 .signupform {
-    border: 3px solid #f1f1f1;
-    width: 500px;
-    font-family: Arial, Helvetica, sans-serif;
+    border: var(--signupform-border);
+    width: var(--signupform-width);
+    font-family: var(--signupform-font-family);
     box-sizing: border-box;
-    border-radius: 5px;
+    border-radius: var(--signupform-border-radius);
 }
 
 .signupform input[type=text],
 .signupform input[type=password],
 .signupform input[type=email] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
+    width: var(--signupform-input-width);
+    padding: var(--signupform-input-padding);
+    margin: var(--signupform-input-margin);
     display: inline-block;
-    border: none;
-    background: #f1f1f1;
+    border: var(--signupform-input-border);
+    background: var(--signupform-input-background);
     box-sizing: border-box;
-    border-radius: 5px;
+    border-radius: var(--signupform-input-border-radius);
 }
 
 .signupform input[type=text]:focus, 
 .signupform input[type=password]:focus, 
 .signupform input[type=email]:focus {
-    background-color: #ddd;
+    background-color: var(--signupform-input-focus-background);
     outline: none;
 }
 
 button {
-    background-color: #04AA6D;
-    color: white;
-    border: none;
+    background-color: var(--signupform-button-background);
+    color: var(--signupform-button-color);
+    border: var(--signupform-button-border);
     cursor: pointer;
-    width: 100%;
+    width: var(--signupform-button-width);
     opacity: 0.9;
-    border-radius: 5px;
+    border-radius: var(--signupform-buton-border-radius);
 }
 
 button:hover {
