--- a/userarea/css/slider.css
+++ b/userarea/css/slider.css
@@ -3,7 +3,7 @@
 }
 
 .slider {
-    -webkit-appearance: none;
+    /*-webkit-appearance: none;*/
     width: 20%;
     height: 20px;
     border-radius: 5px;
