--- a/userarea/css/radio.css
+++ b/userarea/css/radio.css
@@ -2,10 +2,11 @@
 .radiocontainer {
     display: block;
     position: relative;
-    padding-left: 35px;
+    padding-left: 30px;
     margin-bottom: 12px;
     cursor: pointer;
-    font-size: 17px;
+    font-size: 16px;
+    font-family: Arial, Tahoma;
     -webkit-user-select: none; /* Chrome, Opera, Safari */
     -moz-user-select: none; /* Firefox 2+ */
     -ms-user-select: none; /* IE 10+ */
@@ -24,8 +25,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 25px;
-    width: 25px;
+    height: 18px;
+    width: 18px;
+    border: 2px solid gray;
     background-color: #eee;
     border-radius: 50%;
 }
@@ -54,10 +56,10 @@
 
 /* Style the indicator (dot/circle) */
 .radiocontainer .radiobtn:after {
-    top: 8px;
-    left: 8px;
+    top: 4px;
+    left: 4px;
     width: 9px;
-    height: 8px;
+    height: 9px;
     border-radius: 50%;
     background: white;
 }
